--- a/Infected.ipynb
+++ b/Infected.ipynb
@@ -108,7 +108,7 @@
     "ax.add_feature(cartopy.feature.COASTLINE)\n",
     "ax.add_feature(cartopy.feature.BORDERS, linestyle=':')\n",
     "ax.legend(handles=[red_patch,green_patch,blue_patch],loc='lower left')\n",
-    "ax.set_title(\"Currently infected people date: {0}\".format(df.columns[-1]))\n",
+    "ax.set_title(\"Infected people registered to date by contry: {0}\".format(df.columns[-1]))\n",
     "plt.savefig('infections.png', dpi = 320)\n",
     "plt.show()"
    ]
