--- a/Create_crrntInfected.ipynb
+++ b/Create_crrntInfected.ipynb
@@ -88,28 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fin = pd.DataFrame(dict_c)"
+    "df_fin = pd.DataFrame.from_dict(dict_c, orient='index')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_fin.to_csv('Currently_infected_cumu.tsv',sep='\\t', quoting=csv.QUOTE_NONE)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
