--- a/Create_crrntInfected.ipynb
+++ b/Create_crrntInfected.ipynb
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fin.to_csv('Currently_infected_cumu.tsv',sep='\\t', quoting=csv.QUOTE_NONE)"
+    "df_fin.to_csv('Currently_infected_cumu.csv')"
    ]
   },
   {
