--- a/Create_crrntInfected.ipynb
+++ b/Create_crrntInfected.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_infect.to_csv('Currently_infected.tsv',sep='\\t', quoting=csv.QUOTE_NONE)"
+    "#df_infect.to_csv('Currently_infected.tsv',sep='\\t', quoting=csv.QUOTE_NONE)"
    ]
   },
   {
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fin.to_csv('Currently_infected_cumu.csv')"
+    "df_fin.to_csv('Currently_infected_cumu.csv',sep='\\t')"
    ]
   },
   {
